# system_monitoring

./: .gitignore  LICENSE  README.md
c_utils/: disk_io.c
erlang_collector/: LICENSE.md  README.md  rebar.config  start.sh
erlang_collector/apps/erlang_collector/src/: collector.erl
erlang_collector/config/: sys.config  vm.args
haskell_analyzer/: CHANGELOG.md  haskell-analyzer.cabal
haskell_analyzer/app/: Main.hs
rust_core/: Cargo.toml
rust_core/src/: main.rs
scripts/: collector.service
tui/: Cargo.toml
tui/src/: main.rs
