[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
